--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ button[type="submit"]:hover{
     box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.5);
     min-width: 300px;
     border-radius: 10px;
+    overflow: hidden;
     /* border: 2px solid rgb(128, 38, 0); */
 }
 
