--- a/style.css
+++ b/style.css
@@ -41,17 +41,17 @@ h1{
     margin: 10px;
 }
 
-.todo-value{
+.todo-value {
     padding: 5px;
     font-size: 1.5rem;
     font-weight: bold;
-    overflow: hidden;
     border-radius: 10px;
-    width: 150px;
-    margin: 10px;
-    color: #fff;
     color: black;
+    display: block;  
+    word-wrap: break-word; 
+    max-width: 200px;
 }
+
 
 button[type="submit"]{
     padding: 10px;
@@ -76,7 +76,7 @@ button[type="submit"]:hover{
     /* background: linear-gradient(100deg, hsl(0, 8%, 92%), hsl(281, 100%, 75%)); */
     background-color: rgba(0, 0, 0, 0.801);
     /* padding: 20px 50px 30px 50px; */
-    padding: 30px 0;
+    padding: 30px;
     box-shadow: 2px 2px 5px 5px hsla(0, 0%, 0%, 0.5);
     /* min-width: 300px; */
     border-radius: 10px;
@@ -89,7 +89,7 @@ button[type="submit"]:hover{
 
 .card-container{
     /* border: 2px solid green; */
-    width:fit-content;
+    /* width:fit-content; */
     /* min-width: 300px; */
     display: flex;
     flex-direction: column;
@@ -107,6 +107,7 @@ button[type="submit"]:hover{
     justify-content: space-between;
     padding: 15px;
     border-radius: 10px;
+    /* max-width: 300px; */
     /* width: fit-content; */
 
     /* display: none; */
@@ -169,6 +170,10 @@ button[type="submit"]:hover{
     font-weight: bold;
     color: red;
     text-align: center;
+}
+
+.red{
+    color: red;
 }
 
 .open{
