--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h1 {
   display: block;
   word-wrap: break-word;
   max-width: 200px;
+  margin-right: 15px;
 }
 
 button[type="submit"] {
@@ -79,8 +80,8 @@ button[type="submit"]:hover {
   box-shadow: 2px 2px 5px 5px hsla(0, 0%, 0%, 0.5);
   /* min-width: 300px; */
   border-radius: 10px;
-  opacity: 0;
-  visibility: hidden;
+  /* opacity: 0;
+  visibility: hidden; */
   /* overflow-x: scroll; */
   /* border: 2px solid rgb(128, 38, 0); */
   /* border: 2px solid green; */
@@ -171,6 +172,11 @@ button[type="submit"]:hover {
 
 .red {
   color: red;
+}
+
+.hide{
+  opacity: 0;
+  visibility: hidden;
 }
 
 .open {
