--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ button[type="submit"]:hover {
   justify-content: space-between;
   padding: 15px;
   border-radius: 10px;
+  overflow: hidden;
   /* max-width: 300px; */
   /* width: fit-content; */
 
@@ -174,7 +175,7 @@ button[type="submit"]:hover {
   color: red;
 }
 
-.hide{
+.hide {
   opacity: 0;
   visibility: hidden;
 }
@@ -198,12 +199,19 @@ button[type="submit"]:hover {
     max-width: 300px;
   }
 
+  .container{
+    max-width: 250px;
+  }
+
   .todoInput {
     width: 140px;
     font-size: 0.9rem;
   }
 
   .todo-value {
+    padding: 5px 10px 5px 3px;
+    font-size: 1rem;
     max-width: 100px;
+    margin-right: 15px;
   }
 }
